[package]
name = "bhft_test"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.140"
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"